<resources>
    <string name="app_name" translatable="false">CT60A2411-Harjoitustyo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="show_movie">Show</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="movie_archive">Movie Archive</string>
    <string name="showing_now">Showing now</string>
    <string name="settings">Settings</string>
    <string name="archive_updating">Updating archive</string>
    <string name="archive_updated">Archive updated</string>
    <string name="movie_not_found">No movies found</string>
    <string name="date_button" translatable="false">%1d.%2d.</string>
    <string name="original_title">Original Title</string>
    <string name="rating">Rating</string>
    <string name="length">Length</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="year">Year</string>
    <string name="theatre">Theatre</string>
    <string name="showing">Showing</string>
    <string name="language">Language</string>
    <string name="font_size">Font Size</string>
    <string name="home_area">Home Area</string>
    <string name="number_of_future_days_archive_updates">Number of future days archive updates</string>
    <string name="movie_error">Error no movie</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Finnish</item>
    </string-array>
    <string-array name="fontSize_array">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
    </string-array>
    <string-array name="area_array">
        <item>Pääkaupunkiseutu</item>
        <item>Espoo</item>
        <item>Omena</item>
        <item>Sello</item>
        <item>Helsinki</item>
        <item>Itis</item>
        <item>Kinopalatsi Helsinki</item>
        <item>Maxim</item>
        <item>Tennispalatsi</item>
        <item>Flamingo</item>
        <item>Fantasia</item>
        <item>Scala</item>
        <item>Kuvapalatsi</item>
        <item>Strand</item>
        <item>Plaza</item>
        <item>Promenadi</item>
        <item>Tampere</item>
        <item>Cine Atlas</item>
        <item>Plevna</item>
        <item>Turku ja Raisio</item>
        <item>Kinopalatsi Turku</item>
        <item>Luxe Mylly</item>
    </string-array>
</resources>