<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_showing_fragment"
            android:icon="@drawable/ic_baseline_event_available_24"
            android:title="@string/showing_now" />
        <item
            android:id="@+id/nav_archive_fragment"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/movie_archive" />
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>